--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
-    <div id="main background">
-      <div id="rightside">
-        <header>
+    <div id="rightside">
+      <header>
+        <div id="headertop">
           <h1>5280 Landmarks</h1>
           <a id="login" href="login.html">Login</a>
-        </header>
+        </div>
         <nav>
           <ul>
             <li><a href="building.html">Building</a></li>
@@ -20,7 +20,9 @@
             <li><a href="featured.html">Featured</a></li>
           </ul>
         </nav>
-        <main>
+      </header>
+      <main>
+        <div id="maintop">
           <h2>Denver Art Museum</h2>
           <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.
             <br><br>
@@ -30,14 +32,27 @@
             <br><br>
             Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.
           </p>
-          
-        </main> 
-        <footer>
-          <p>
-            Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.
-          </p>
-        </footer>
-      </div>
+        </div>
+        <div id="mainbottom">
+          <figure>
+            <h3>Larimer Square</h3>
+            <img src="./images/2.jpg" alt="Larimer Square">
+          </figure>
+          <figure>
+            <h3>Millenium Bride</h3>
+            <img src="./images/5.jpg" alt="Millenium Bride">
+          </figure>
+          <figure>
+            <h3>Molly Brown House</h3>
+            <img src="./images/6.jpg" alt="Molly Brown House">
+          </figure>
+        </div>  
+      </main> 
+      <footer>
+        <p>
+          Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
